[package]
name = "poseidon-revm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "0.10", features = ["std"], default-features = false }
ethers = "2.0.11"
revm = { git = "https://github.com/et-industries/revm.git", features = [
    "serde",
] }
# revm = { path = "../revm/crates/revm", features = ["serde"] }
anyhow = "1.0.89"
serde = "1.0.193"
serde_json = "1.0.108"

# alloy
alloy-sol-types = { version = "0.8.2", default-features = false, features = [
    "std",
] }
alloy-eips = "0.9.2"
alloy-provider = "0.9.2"
